ola-parser/src/testdata/syntaxTests/inheritance/override/override_multiple_fail4.sol
contract A {
	fn foo() internal -> (u256);
}
contract X {
	int  override() testvar;
}
// ----
// ParserError 2314: (93-94): Expected identifier but got ')'
